# CareerPilotAI-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG_DEV.md  Dockerfile  PLAN.md  README.md  api.py  config.py  docker-compose.yml  main.py  nodes.py  pyproject.toml  requirements.txt  state.py  utils.py
.github/workflows/: ci.yml  deploy-backend.yml
agents/: __init__.py  job_matching.py  llm_utils.py  orchestrator.py  participant.py  resume_analysis.py  skill_gap.py  study_planning.py  summarizer.py
data/: .qdrant_index_meta.json  jobs.jsonl  learning_resources.jsonl
promptfoo/: job_matching_promptfooconfig.yaml  promptfooconfig.yaml  resume_analysis_promptfooconfig.yaml  study_planning_promptfooconfig.yaml
promptfoo/assertions/: jobMatchingAssertions.js  resumeAssertions.js  skillGapAssertions.js  studyPlanningAssertions.js
security/: __init__.py  input_guard.py  llm_injection_guard.py  output_filter.py
tests/integration/: test_adversarial_api.py  test_api.py  test_run_bias_stability.py  test_run_partial_bias_stability.py  test_study_planning_integration.py
tests/lint/: README.md
tests/sast/: README.md
tests/unit/: test_input_guard.py  test_job_matching.py  test_llm_injection_guard.py  test_output_filter.py  test_resume_analysis.py  test_skill_gap.py  test_study_planning.py
tools/: __init__.py  explainability.py  jobs_dataset.py  learning_rag.py  resume_io.py  semantic_match.py  vector_store_qdrant.py
