[project]
name = "careerpilot-ai"
version = "0.1.0"
description = "Agentic AI Career Advisor (LangGraph multi-agent demo)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-core>=1.2.22",
    "langchain-openai>=0.2.14",
    "langgraph>=0.6.6",
    "numpy>=2.0.0",
    "pypdf",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.12.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

